Bug 472192 - Playback hiccups for three frames when pressing "Play" button on Windows
Summary: Playback hiccups for three frames when pressing "Play" button on Windows
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords: regression, release_blocker
Depends on:
Blocks:
 
Reported: 2023-07-12 15:13 UTC by Dmitry Kazakov
Modified: 2023-07-25 04:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry Kazakov 2023-07-12 15:13:37 UTC
STEPS TO REPRODUCE
1. Start Krita on Windows
2. Create a document with animation and **sound track** (from an mp3 file)
3. Set the time cursor to **any** position on the timeline
4. Press Play button 

OBSERVED RESULT

The playback hiccups a little bit and then continues as normal. It looks as if the first three frames of the range are played twice: audio plays twice and the timeline cursor jumps accordingly.

EXPECTED RESULT

The playback starts normally without playing anything twice

ADDITIONAL INFORMATION

I cannot reproduce this bug on Linux. It happens only on Windows.
Comment 1 Dmitry Kazakov 2023-07-12 15:21:19 UTC
I have tested in this branch, but it seems like the MR change should not be related:
https://invent.kde.org/graphics/krita/-/merge_requests/1843
Comment 2 Bug Janitor Service 2023-07-13 07:11:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1852
Comment 3 Dmitry Kazakov 2023-07-14 00:54:33 UTC
Git commit e6874bd1269428a2af742a4850b30a92396934a5 by Dmitry Kazakov.
Committed on 13/07/2023 at 07:08.
Pushed by emmetoneill into branch 'master'.

Fix glitches at the start of the animation with audio

The problem happened that StopAndResume object explicitly requested
frame change in parallel to the normal pull-producer. That caused
the first frames to played (and showed) twice.

M  +0    -16   libs/ui/KisPlaybackEngineMLT.cpp

https://invent.kde.org/graphics/krita/-/commit/e6874bd1269428a2af742a4850b30a92396934a5
Comment 4 Emmet O'Neill 2023-07-25 04:00:52 UTC
Git commit b3bf9685dc1d7edf471d67703a243f4738d5975e by Emmet O'Neill, on behalf of Dmitry Kazakov.
Committed on 25/07/2023 at 05:44.
Pushed by emmetoneill into branch 'master'.

Properly intialize KisFrameDisplayProxy to avoid hiccups on the first playback start
Related: bug 472193

M  +2    -0    libs/ui/animation/KisFrameDisplayProxy.cpp

https://invent.kde.org/graphics/krita/-/commit/b3bf9685dc1d7edf471d67703a243f4738d5975e