Fix glitches at the start of the animation with audio

The problem happened that StopAndResume object explicitly requested
frame change in parallel to the normal pull-producer. That caused
the first frames to played (and showed) twice.

BUG:472192